# Geo3DML

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindGWEARTH.cmake  FindOSG.cmake  libbsoncxx-config-version.cmake  libbsoncxx-config.cmake  libmongocxx-config.cmake
config/: config.xml
data/: 结构模型综合示例.rar
data/geo3dml_test_models/Geo3dml/: Model-1.xml  Model-1_mod.xml  Model-2.xml  Model-2_mod.xml  Model-3.xml  Model-3_mod.xml  ZK0.xml  ZK0_mod.xml  ZK1.xml  ZK100.xml  ZK100_mod.xml  ZK150.xml  ZK150_mod.xml  ZK1_mod.xml  ZK2.xml  ZK20.xml  ZK200.xml  ZK200_mod.xml  ZK20_mod.xml  ZK220.xml  ZK220_mod.xml  ZK250.xml  ZK250_mod.xml  ZK2_mod.xml  ZK3.xml  ZK3_mod.xml  ZK4.xml  ZK4_mod.xml  ZK5.xml  ZK5_mod.xml  ZK6.xml  ZK6_mod.xml  ZK7.xml  ZK7_mod.xml  ZK8.xml  ZK8_mod.xml  m1-1.xml  m1-1_mod.xml  m1.xml  m1_mod.xml  (+9 more)
data/geo3dml_test_models/cubeMode/: aa.xml  new Model_mod.xml  六面体模型.xml
data/geo3dml_test_models/mesh/: model1.xml  model1_mod.xml  三维地质结构模型（单对象组织） (1).rar  单个地质体组织.xml
data/geo3dml_test_models/六面体模型/: new Model.xml  规则六面体模型.xml
data/geo3dml_test_models/四面体模型/: geoMap.xml  modeldata.xml  工区workspace.xml
data/geo3dml_test_models/规则网格模型/模型1/: 01.xml  包谷图三维地质模型0121.xml  包谷图三维地质模型0121_mod.xml
data/geo3dml_test_models/规则网格模型/模型2/: mapModel.xml  modeldata.xml  project_属性模型.xml
src/: CMakeLists.txt
src/GMLFeature/: AbstractGML1.cpp  AbstractGML1.h  CMakeLists.txt  Export.h  ReadMe.txt  gmlAppearance.h  gmlAttribute.cpp  gmlAttribute.h  gmlFeature.h  gmlFeatureCollection.h  guiProgressWindow.cpp  guiProgressWindow.h
src/GMXMLFileIO/: CMakeLists.txt  Export.h  FeatureClassXMLReader.cpp  FeatureClassXMLReader.h  FeatureClassXMLWriter.cpp  FeatureClassXMLWriter.cpp.bak  FeatureClassXMLWriter.h  FeatureRelationXMLReader.cpp  FeatureRelationXMLReader.cpp.bak  FeatureRelationXMLReader.h  FeatureRelationXMLWriter.cpp  FeatureRelationXMLWriter.cpp.bak  FeatureRelationXMLWriter.h  FeatureXMLReader.cpp  FeatureXMLReader.h  Geo3DLayerXMLReader.cpp  Geo3DLayerXMLReader.h  Geo3DMapXMLReader.cpp  Geo3DMapXMLReader.h  Geo3DMapXMLWriter.cpp  Geo3DMapXMLWriter.h  Geo3DProjectXMLReader.cpp  Geo3DProjectXMLReader.cpp.bak  Geo3DProjectXMLReader.h  Geo3DProjectXMLWriter.cpp  Geo3DProjectXMLWriter.h  Geo3DStyleXMLReader.cpp  Geo3DStyleXMLReader.h  Geo3DStyleXMLWriter.cpp  Geo3DStyleXMLWriter.h  GeoFeatureXMLReader.cpp  GeoFeatureXMLReader.h  GeoFeatureXMLWriter.cpp  GeoFeatureXMLWriter.h  GeoModelXMLReader.cpp  GeoModelXMLReader.h  GeoModelXMLWriter.cpp  GeoModelXMLWriter.h  GeoStyleXMLReader.cpp  GeoStyleXMLReader.h  (+20 more)
src/GM_XML/: AbstractFeature.cpp  AbstractFeature.h  AbstractGML.cpp  AbstractGML.h  AbstractGeometry.cpp  AbstractGeometry.h  AbstractSpatialReferenceSystem.cpp  AbstractSpatialReferenceSystem.h  AbstractTexture.cpp  AbstractTexture.h  CMakeLists.txt  CoverageStyle.cpp  CoverageStyle.h  Export.h  FeatureClass.cpp  FeatureClass.h  FeatureRelation.cpp  FeatureRelation.h  FeatureStyle.cpp  FeatureStyle.h  Geo3DLayer.cpp  Geo3DLayer.h  Geo3DMap.cpp  Geo3DMap.h  Geo3DMapMetaData.cpp  Geo3DMapMetaData.h  Geo3DProject.cpp  Geo3DProject.h  Geo3DProjectMetaData.cpp  Geo3DProjectMetaData.h  Geo3DStyle.cpp  Geo3DStyle.h  GeoModel.cpp  GeoModel.h  GeoModelMetaData.cpp  GeoModelMetaData.h  GeoSceneStyle.cpp  GeoSceneStyle.h  GeoSymbolizer.cpp  GeoSymbolizer.h  (+15 more)
src/SaxReader/: CMakeLists.txt  FeatureRelationReader.cpp  FeatureRelationReader.h  FieldReader.cpp  FieldReader.h  Geo3DLayerReader.cpp  Geo3DLayerReader.h  Geo3DMapReader.h  Geo3DProjectReader.cpp  Geo3DProjectReader.h  Geo3DStyleReader.h  GeoFeatureReader.h  GeoModelReader.h  GeologicFeatureClassReader.h  MyTimer.h  SaxReader.cpp  ShapePropertyReader.h  ShapeReader.h  XMLBase64.h  global.cpp  global.h  gmmlDisplayErrorandWarning.cpp  gmmlDisplayErrorandWarning.h  gmmlSystem.h  gmmlSystemInfo.cpp  gmmlSystemInfo.h  stdafx.cpp
src/examples/: CMakeLists.txt
src/examples/SaxReader/: CMakeLists.txt  Export.h  FeatureRelationReader.h  FieldReader.h  Geo3DLayerReader.h  Geo3DMapReader.cpp  Geo3DMapReader.h  Geo3DProjectReader.cpp  Geo3DProjectReader.h  Geo3DStyleReader.cpp  Geo3DStyleReader.h  GeoFeatureReader.cpp  GeoFeatureReader.h  GeoModelReader.cpp  GeoModelReader.h  GeologicFeatureClassReader.cpp  GeologicFeatureClassReader.h  ReadMe.txt  SaxReader.cpp  ShapePropertyReader.cpp  ShapePropertyReader.h  ShapeReader.cpp  ShapeReader.h  XMLBase64.h  global.h  gmmlDisplayErrorandWarning.h  gmmlSystem.h  gmmlSystemInfo.cpp  gmmlSystemInfo.h  xmlBase64.cpp
src/examples/dllTest/: CMakeLists.txt  dllTest.cpp
src/examples/geo3dmlReader/: CMakeLists.txt  EffectUtil.cpp  EffectUtil.h  Geo3dmlReaderWriter - 副本 (2).cpp  Geo3dmlReaderWriter - 副本 (3).cpp  Geo3dmlReaderWriter - 副本.cpp  Geo3dmlReaderWriter.cpp  Vector.cpp  Vector.h  VoxelMeshClipper.cpp  VoxelMeshClipper.h  main.cpp
src/examples/geo3dmlReader/disabled/: us_geo3d_filter.cpp  us_geo3d_filter.h
src/vtkExtending/: CMakeLists.txt  Export.h  GMCornerPointGrid.cpp  GMCornerPointGrid.h  GMPolyData.cpp  GMPolyData.h  GMStructuredPoints.cpp  GMStructuredPoints.h  GMUnstructuredGrid.cpp  GMUnstructuredGrid.h  vtkAMRBox.h  vtkAbstractArray.h  vtkAbstractTransform.h  vtkAlgorithm.cxx  vtkAlgorithm.h  vtkAlgorithmOutput.h  vtkAmoebaMinimizer.h  vtkAnimationCue.h  vtkAnimationScene.h  vtkAssemblyNode.h  vtkAssemblyPath.h  vtkAssemblyPaths.h  vtkBitArray.h  vtkBox.h  vtkByteSwap.h  vtkCallbackCommand.h  vtkCell.h  vtkCell3D.h  vtkCellArray.h  vtkCellData.h  vtkCellLinks.h  vtkCellLocator.h  vtkCellTypes.h  vtkCharArray.h  vtkCollection.h  vtkCollectionIterator.h  vtkColorTransferFunction.h  vtkCommand.h  vtkCommonInstantiator.h  vtkCompositeDataIterator.h  (+322 more)
src/vtkExtending/vtksys/ios/: SSTREAM
src/vtklibxml2/: CMakeLists.txt  CTestTestfile.cmake  SAX2.c  cmake_install.cmake  config.h  error.c  libxml.h  parser.c  relaxng.c  rngparser.c  runtest.c  threads.c  tree.c  xmlschemas.c  xmlstring.c
src/vtklibxml2/include/libxml/: iconv.h  tree.h
src/vtklibxml2/libxml/: tree.h  xmlexports.h  xmlversion.h
src/vtklibxml2/libxml - 副本/: vssver2.scc
(+2 files in other folders)
