IF   (DYNAMIC_GWEARTH)
    ADD_DEFINITIONS(-DVTKEXTENDING_LIBRARY)
ELSE (DYNAMIC_GWEARTH)
    ADD_DEFINITIONS(-DVTKEXTENDING_LIBRARY_STATIC)
ENDIF(DYNAMIC_GWEARTH)

IF(WIN32)
    IF(MSVC)
        SET(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} /NODEFAULTLIB:MSVCRT")
    ENDIF(MSVC)
ENDIF(WIN32)

SET(LIB_NAME "vtkExtending")

SET(HEADER_PATH ${PROJECT_SOURCE_DIR}/include/${LIB_NAME})
#INCLUDE_DIRECTORIES(AFTER ${OSG_INCLUDE_DIR})
#INCLUDE_DIRECTORIES(AFTER ${OSGEARTH_INCLUDE_DIR})

SET(LIB_PUBLIC_HEADERS
	Export.h
	GMCornerPointGrid.h
	GMPolyData.h
	GMStructuredPoints.h
	GMUnstructuredGrid.h
	vtkAbstractArray.h
	vtkAbstractTransform.h
	vtkAlgorithm.h
	vtkAlgorithmOutput.h
	vtkAmoebaMinimizer.h
	vtkAMRBox.h
	vtkAnimationCue.h
	vtkAnimationScene.h
	vtkAssemblyNode.h
	vtkAssemblyPath.h
	vtkAssemblyPaths.h
	vtkBitArray.h
	vtkBox.h
	vtkByteSwap.h
	vtkCallbackCommand.h
	vtkCell.h
	vtkCell3D.h
	vtkCellArray.h
	vtkCellData.h
	vtkCellLinks.h
	vtkCellLocator.h
	vtkCellType.h
	vtkCellTypes.h
	vtkCharArray.h
	vtkCollection.h
	vtkCollectionIterator.h
	vtkColorTransferFunction.h
	vtkCommand.h
	vtkCommonInstantiator.h
	vtkCompositeDataIterator.h
	vtkCompositeDataPipeline.h
	vtkCompositeDataSet.h
	vtkCone.h
	vtkConfigure.h
	vtkContourValues.h
	vtkConvexPointSet.h
	vtkCoordinate.h
	vtkCriticalSection.h
	vtkCylinder.h
	vtkCylindricalTransform.h
	vtkDataArray.h
	vtkDataArrayCollection.h
	vtkDataArrayCollectionIterator.h
	vtkDataArraySelection.h
	vtkDataArrayTemplate.h
	vtkDataArrayTemplate.txx
	vtkDataArrayTemplateImplicit.txx
	vtkDataObject.h
	vtkDataObjectAlgorithm.h
	vtkDataObjectCollection.h
	vtkDataObjectSource.h
	vtkDataSet.h
	vtkDataSetAlgorithm.h
	vtkDataSetAttributes.h
	vtkDataSetCollection.h
	vtkDataSetSource.h
	vtkDataSetToDataSetFilter.h
	vtkDataSetToImageFilter.h
	vtkDataSetToPolyDataFilter.h
	vtkDataSetToStructuredGridFilter.h
	vtkDataSetToStructuredPointsFilter.h
	vtkDataSetToUnstructuredGridFilter.h
	vtkDebugLeaks.h
	vtkDebugLeaksManager.h
	vtkDemandDrivenPipeline.h
	vtkDirectory.h
	vtkDoubleArray.h
	vtkDynamicLoader.h
	vtkEdgeTable.h
	vtkEmptyCell.h
	vtkErrorCode.h
	vtkEventForwarderCommand.h
	vtkExecutive.h
	vtkExplicitCell.h
	vtkExtentSplitter.h
	vtkExtentTranslator.h
	vtkFastNumericConversion.h
	vtkFieldData.h
	vtkFileOutputWindow.h
	vtkFilteringInformationKeyManager.h
	vtkFilteringInstantiator.h
	vtkFloatArray.h
	vtkFunctionParser.h
	vtkFunctionSet.h
	vtkGarbageCollector.h
	vtkGarbageCollectorManager.h
	vtkGeneralTransform.h
	vtkGenericAdaptorCell.h
	vtkGenericAttribute.h
	vtkGenericAttributeCollection.h
	vtkGenericCell.h
	vtkGenericCellIterator.h
	vtkGenericCellTessellator.h
	vtkGenericDataSet.h
	vtkGenericDataSetAlgorithm.h
	vtkGenericEdgeTable.h
	vtkGenericFilteringInstantiator.h
	vtkGenericInterpolatedVelocityField.h
	vtkGenericPointIterator.h
	vtkGenericSubdivisionErrorMetric.h
	vtkGeometricErrorMetric.h
	vtkGraphicsInstantiator.h
	vtkHeap.h
	vtkHexagonalPrism.h
	vtkHexahedron.h
	vtkHierarchicalBoxDataSet.h
	vtkHierarchicalBoxDataSetInternal.h
	vtkHierarchicalDataInformation.h
	vtkHierarchicalDataIterator.h
	vtkHierarchicalDataSet.h
	vtkHierarchicalDataSetAlgorithm.h
	vtkHierarchicalDataSetInternal.h
	vtkHomogeneousTransform.h
	vtkHybridInstantiator.h
	vtkIdentityTransform.h
	vtkIdList.h
	vtkIdListCollection.h
	vtkIdTypeArray.h
	vtkImageAlgorithm.h
	vtkImageData.h
	vtkImageInPlaceFilter.h
	vtkImageIterator.h
	vtkImageIterator.txx
	vtkImageMultipleInputFilter.h
	vtkImageMultipleInputOutputFilter.h
	vtkImageProgressIterator.h
	vtkImageProgressIterator.txx
	vtkImageSource.h
	vtkImageToImageFilter.h
	vtkImageToStructuredPoints.h
	vtkImageTwoInputFilter.h
	vtkImagingInstantiator.h
	vtkImplicitBoolean.h
	vtkImplicitDataSet.h
	vtkImplicitFunction.h
	vtkImplicitFunctionCollection.h
	vtkImplicitSelectionLoop.h
	vtkImplicitSum.h
	vtkImplicitVolume.h
	vtkImplicitWindowFunction.h
	vtkIndent.h
	vtkInformation.h
	vtkInformationDataObjectKey.h
	vtkInformationDoubleKey.h
	vtkInformationDoubleVectorKey.h
	vtkInformationExecutivePortKey.h
	vtkInformationExecutivePortVectorKey.h
	vtkInformationIdTypeKey.h
	vtkInformationInformationKey.h
	vtkInformationInformationVectorKey.h
	vtkInformationIntegerKey.h
	vtkInformationIntegerPointerKey.h
	vtkInformationIntegerVectorKey.h
	vtkInformationKey.h
	vtkInformationKeyVectorKey.h
	vtkInformationObjectBaseKey.h
	vtkInformationRequestKey.h
	vtkInformationStringKey.h
	vtkInformationUnsignedLongKey.h
	vtkInformationVector.h
	vtkInitialValueProblemSolver.h
	vtkInstantiator.h
	vtkIntArray.h
	vtkInterpolatedVelocityField.h
	vtkIOInstantiator.h
	vtkIOStream.h
	vtkIOStreamFwd.h
	#vtkJavaAwt.h
	#vtkJavaUtil.h
	vtkKochanekSpline.h
	vtkLargeInteger.h
	vtkLine.h
	vtkLinearTransform.h
	vtkLocator.h
	vtkLogLookupTable.h
	vtkLongArray.h
	vtkLongLongArray.h
	vtkLookupTable.h
	#vtkMapper2D.h
	vtkMarchingCubesCases.h
	vtkMarchingSquaresCases.h
	vtkMath.h
	vtkMatrix4x4.h
	vtkMatrixToHomogeneousTransform.h
	vtkMatrixToLinearTransform.h
	vtkMergePoints.h
	vtkMultiPartExtentTranslator.h
	vtkMultiThreader.h
	vtkMutexLock.h
	vtkNonLinearCell.h
	vtkObject.h
	vtkObjectBase.h
	vtkObjectFactory.h
	vtkObjectFactoryCollection.h
	vtkOldStyleCallbackCommand.h
	vtkOrderedTriangulator.h
	vtkOStreamWrapper.h
	vtkOStrStreamWrapper.h
	vtkOutputWindow.h
	vtkOverrideInformation.h
	vtkOverrideInformationCollection.h
	vtkParametricBoy.h
	vtkParametricConicSpiral.h
	vtkParametricCrossCap.h
	vtkParametricDini.h
	vtkParametricEllipsoid.h
	vtkParametricEnneper.h
	vtkParametricFigure8Klein.h
	vtkParametricFunction.h
	vtkParametricKlein.h
	vtkParametricMobius.h
	vtkParametricRandomHills.h
	vtkParametricRoman.h
	#vtkParametricSpline.h
	vtkParametricSuperEllipsoid.h
	vtkParametricSuperToroid.h
	vtkParametricTorus.h
	vtkPentagonalPrism.h
	vtkPerlinNoise.h
	vtkPerspectiveTransform.h
	vtkPiecewiseFunction.h
	vtkPiecewiseFunctionAlgorithm.h
	vtkPiecewiseFunctionShiftScale.h
	vtkPixel.h
	vtkPlane.h
	vtkPlaneCollection.h
	vtkPlanes.h
	vtkPointData.h
	vtkPointLocator.h
	vtkPoints.h
	vtkPointSet.h
	vtkPointSetAlgorithm.h
	vtkPointSetSource.h
	vtkPointSetToPointSetFilter.h
	vtkPolyData.h
	vtkPolyDataAlgorithm.h
	vtkPolyDataCollection.h
	vtkPolyDataSource.h
	vtkPolyDataToPolyDataFilter.h
	vtkPolygon.h
	vtkPolyLine.h
	vtkPolyVertex.h
	vtkPriorityQueue.h
	vtkProcessObject.h
	vtkProcessStatistics.h
	vtkProp.h
	vtkPropAssembly.h
	vtkPropCollection.h
	vtkProperty2D.h
	vtkPyramid.h
	#vtkPython.h
	#vtkPythonUtil.h
	vtkQuad.h
	vtkQuadraticEdge.h
	vtkQuadraticHexahedron.h
	vtkQuadraticPyramid.h
	vtkQuadraticQuad.h
	vtkQuadraticTetra.h
	vtkQuadraticTriangle.h
	vtkQuadraticWedge.h
	vtkQuadric.h
	vtkRayCastStructures.h
	vtkRectilinearGrid.h
	vtkRectilinearGridAlgorithm.h
	vtkRectilinearGridSource.h
	vtkRectilinearGridToPolyDataFilter.h
	vtkReferenceCount.h
	vtkRenderingInstantiator.h
	vtkRungeKutta2.h
	vtkRungeKutta4.h
	vtkRungeKutta45.h
	vtkScalarsToColors.h
	vtkScalarTree.h
	vtkSetGet.h
	vtkShortArray.h
	vtkSignedCharArray.h
	vtkSimpleCellTessellator.h
	vtkSimpleImageToImageFilter.h
	vtkSimpleScalarTree.h
	vtkSmartPointer.h
	vtkSmartPointerBase.h
	vtkSmoothErrorMetric.h
	vtkSource.h
	vtkSphere.h
	vtkSphericalTransform.h
	vtkSpline.h
	vtkstd/algorithm
	vtkstd/deque
	vtkstd/exception
	vtkstd/iterator
	vtkstd/list
	vtkstd/map
	vtkstd/numeric
	vtkstd/queue
	vtkstd/set
	vtkstd/stack
	vtkstd/stdexcept
	vtkstd/string
	vtkstd/utility
	vtkstd/vector
	vtkStdString.h
	vtkStreamingDemandDrivenPipeline.h
	vtkStringArray.h
	vtkStructuredData.h
	vtkStructuredGrid.h
	vtkStructuredGridAlgorithm.h
	vtkStructuredGridSource.h
	vtkStructuredGridToPolyDataFilter.h
	vtkStructuredGridToStructuredGridFilter.h
	vtkStructuredPoints.h
	vtkStructuredPointsCollection.h
	vtkStructuredPointsSource.h
	vtkStructuredPointsToPolyDataFilter.h
	vtkStructuredPointsToStructuredPointsFilter.h
	vtkStructuredPointsToUnstructuredGridFilter.h
	vtkStructuredVisibilityConstraint.h
	vtkSuperquadric.h
	vtksys/ios/IOSFWD
	vtksys/ios/SSTREAM
	vtksys/stl/algorithm
	vtksys/stl/deque
	vtksys/stl/exception
	vtksys/stl/iterator
	vtksys/stl/list
	vtksys/stl/map
	vtksys/stl/numeric
	vtksys/stl/queue
	vtksys/stl/set
	vtksys/stl/stack
	vtksys/stl/stdexcept
	vtksys/stl/string
	vtksys/stl/utility
	vtksys/stl/vector
	vtkSystemIncludes.h
	vtkTableExtentTranslator.h
	#vtkTcl.h
	#vtkTclUtil.h
	vtkTemplateAliasMacro.h
	vtkTensor.h
	vtkTetra.h
	vtkThreadedImageAlgorithm.h
	vtkThreadMessager.h
	vtkTimerLog.h
	vtkTimeStamp.h
	vtkTk.h
	vtkToolkits.h
	vtkTransform.h
	vtkTransformCollection.h
	vtkTriangle.h
	vtkTriangleStrip.h
	vtkTrivialProducer.h
	vtkType.h
	vtkTypedArray.cxx.in
	vtkTypedArray.h.in
	vtkTypeTraits.h
	vtkUniformGrid.h
	vtkUnsignedCharArray.h
	vtkUnsignedIntArray.h
	vtkUnsignedLongArray.h
	vtkUnsignedLongLongArray.h
	vtkUnsignedShortArray.h
	vtkUnsigned__Int64Array.h
	vtkUnstructuredGrid.h
	vtkUnstructuredGridAlgorithm.h
	vtkUnstructuredGridSource.h
	vtkUnstructuredGridToPolyDataFilter.h
	vtkUnstructuredGridToUnstructuredGridFilter.h
	vtkVersion.h
	vtkVertex.h
	vtkViewDependentErrorMetric.h
	#vtkViewport.h
	vtkVoidArray.h
	vtkVolumeRenderingInstantiator.h
	vtkVoxel.h
	vtkWarpTransform.h
	vtkWedge.h
	vtkWidgetsInstantiator.h
	vtkWin32Header.h
	vtkWin32OutputWindow.h
	vtkWin32ProcessOutputWindow.h
	#vtkWinCE.h
	vtkWindow.h
	vtkWindowLevelLookupTable.h
	vtkWindows.h
	vtkXMLFileOutputWindow.h
	vtk__Int64Array.h
)

SET(TARGET_SRC
	GMCornerPointGrid.cpp
	GMPolyData.cpp
	GMStructuredPoints.cpp
	GMUnstructuredGrid.cpp
	vtkAbstractArray.cxx
	vtkAbstractTransform.cxx
	vtkAlgorithm.cxx
	vtkAlgorithmOutput.cxx
	vtkAmoebaMinimizer.cxx
	vtkAnimationCue.cxx
	vtkAnimationScene.cxx
	vtkAssemblyNode.cxx
	vtkAssemblyPath.cxx
	vtkAssemblyPaths.cxx
	vtkBitArray.cxx
	vtkBox.cxx
	vtkByteSwap.cxx
	vtkCallbackCommand.cxx
	vtkCell.cxx
	vtkCell3D.cxx
	vtkCellArray.cxx
	vtkCellData.cxx
	vtkCellLinks.cxx
	vtkCellLocator.cxx
	vtkCellTypes.cxx
	vtkCharArray.cxx
	vtkCollection.cxx
	vtkCollectionIterator.cxx
	vtkColorTransferFunction.cxx
	vtkCommand.cxx
	vtkCompositeDataIterator.cxx
	vtkCompositeDataPipeline.cxx
	vtkCompositeDataSet.cxx
	vtkCone.cxx
	vtkContourValues.cxx
	vtkConvexPointSet.cxx
	vtkCoordinate.cxx
	vtkCriticalSection.cxx
	vtkCylinder.cxx
	vtkCylindricalTransform.cxx
	vtkDataArray.cxx
	vtkDataArrayCollection.cxx
	vtkDataArrayCollectionIterator.cxx
	vtkDataArraySelection.cxx
	vtkDataArrayTemplate.txx
	vtkDataArrayTemplateImplicit.txx
	vtkDataObject.cxx
	vtkDataObjectAlgorithm.cxx
	vtkDataObjectCollection.cxx
	vtkDataObjectSource.cxx
	vtkDataSet.cxx
	vtkDataSetAlgorithm.cxx
	vtkDataSetAttributes.cxx
	vtkDataSetCollection.cxx
	vtkDataSetSource.cxx
	vtkDataSetToDataSetFilter.cxx
	vtkDataSetToImageFilter.cxx
	vtkDataSetToPolyDataFilter.cxx
	vtkDataSetToStructuredGridFilter.cxx
	vtkDataSetToStructuredPointsFilter.cxx
	vtkDataSetToUnstructuredGridFilter.cxx
	vtkDebugLeaks.cxx
	vtkDebugLeaksManager.cxx
	vtkDemandDrivenPipeline.cxx
	vtkDirectory.cxx
	vtkDoubleArray.cxx
	vtkDynamicLoader.cxx
	vtkEdgeTable.cxx
	vtkEmptyCell.cxx
	vtkErrorCode.cxx
	vtkEventForwarderCommand.cxx
	vtkExecutive.cxx
	vtkExplicitCell.cxx
	vtkExtending.suo
	vtkExtentSplitter.cxx
	vtkExtentTranslator.cxx
	vtkFastNumericConversion.cxx
	vtkFieldData.cxx
	vtkFileOutputWindow.cxx
	vtkFilteringInformationKeyManager.cxx
	vtkFloatArray.cxx
	vtkFunctionParser.cxx
	vtkFunctionSet.cxx
	vtkGarbageCollector.cxx
	vtkGarbageCollectorManager.cxx
	vtkGeneralTransform.cxx
	vtkGenericAdaptorCell.cxx
	vtkGenericAttribute.cxx
	vtkGenericAttributeCollection.cxx
	vtkGenericCell.cxx
	vtkGenericCellIterator.cxx
	vtkGenericCellTessellator.cxx
	vtkGenericDataSet.cxx
	vtkGenericDataSetAlgorithm.cxx
	vtkGenericEdgeTable.cxx
	vtkGenericInterpolatedVelocityField.cxx
	vtkGenericPointIterator.cxx
	vtkGenericSubdivisionErrorMetric.cxx
	vtkGeometricErrorMetric.cxx
	vtkHeap.cxx
	vtkHexagonalPrism.cxx
	vtkHexahedron.cxx
	vtkHierarchicalBoxDataSet.cxx
	vtkHierarchicalDataInformation.cxx
	vtkHierarchicalDataIterator.cxx
	vtkHierarchicalDataSet.cxx
	vtkHierarchicalDataSetAlgorithm.cxx
	vtkHomogeneousTransform.cxx
	vtkIdentityTransform.cxx
	vtkIdList.cxx
	vtkIdListCollection.cxx
	vtkIdTypeArray.cxx
	vtkImageAlgorithm.cxx
	vtkImageData.cxx
	vtkImageInPlaceFilter.cxx
	vtkImageIterator.cxx
	vtkImageIterator.txx
	vtkImageMultipleInputFilter.cxx
	vtkImageMultipleInputOutputFilter.cxx
	vtkImageProgressIterator.cxx
	vtkImageProgressIterator.txx
	vtkImageSource.cxx
	vtkImageToImageFilter.cxx
	vtkImageToStructuredPoints.cxx
	vtkImageTwoInputFilter.cxx
	vtkImplicitBoolean.cxx
	vtkImplicitDataSet.cxx
	vtkImplicitFunction.cxx
	vtkImplicitFunctionCollection.cxx
	vtkImplicitSelectionLoop.cxx
	vtkImplicitSum.cxx
	vtkImplicitVolume.cxx
	vtkImplicitWindowFunction.cxx
	vtkIndent.cxx
	vtkInformation.cxx
	vtkInformationDataObjectKey.cxx
	vtkInformationDoubleKey.cxx
	vtkInformationDoubleVectorKey.cxx
	vtkInformationExecutivePortKey.cxx
	vtkInformationExecutivePortVectorKey.cxx
	vtkInformationIdTypeKey.cxx
	vtkInformationInformationKey.cxx
	vtkInformationInformationVectorKey.cxx
	vtkInformationIntegerKey.cxx
	vtkInformationIntegerPointerKey.cxx
	vtkInformationIntegerVectorKey.cxx
	vtkInformationKey.cxx
	vtkInformationKeyVectorKey.cxx
	vtkInformationObjectBaseKey.cxx
	vtkInformationRequestKey.cxx
	vtkInformationStringKey.cxx
	vtkInformationUnsignedLongKey.cxx
	vtkInformationVector.cxx
	vtkInitialValueProblemSolver.cxx
	vtkInstantiator.cxx
	vtkIntArray.cxx
	vtkInterpolatedVelocityField.cxx
	vtkIOStream.cxx
	#vtkJavaUtil.cxx
	vtkKochanekSpline.cxx
	vtkLargeInteger.cxx
	vtkLine.cxx
	vtkLinearTransform.cxx
	vtkLocator.cxx
	vtkLogLookupTable.cxx
	vtkLongArray.cxx
	vtkLongLongArray.cxx
	vtkLookupTable.cxx
	#vtkMapper2D.cxx
	vtkMath.cxx
	vtkMatrix4x4.cxx
	vtkMatrixToHomogeneousTransform.cxx
	vtkMatrixToLinearTransform.cxx
	vtkMergePoints.cxx
	vtkMultiPartExtentTranslator.cxx
	vtkMultiThreader.cxx
	vtkMutexLock.cxx
	vtkNonLinearCell.cxx
	vtkObject.cxx
	vtkObjectBase.cxx
	vtkObjectFactory.cxx
	vtkObjectFactoryCollection.cxx
	vtkOldStyleCallbackCommand.cxx
	vtkOrderedTriangulator.cxx
	vtkOStreamWrapper.cxx
	vtkOStrStreamWrapper.cxx
	vtkOutputWindow.cxx
	vtkOverrideInformation.cxx
	vtkOverrideInformationCollection.cxx
	vtkParametricBoy.cxx
	vtkParametricConicSpiral.cxx
	vtkParametricCrossCap.cxx
	vtkParametricDini.cxx
	vtkParametricEllipsoid.cxx
	vtkParametricEnneper.cxx
	vtkParametricFigure8Klein.cxx
	vtkParametricFunction.cxx
	vtkParametricKlein.cxx
	vtkParametricMobius.cxx
	vtkParametricRandomHills.cxx
	vtkParametricRoman.cxx
	#vtkParametricSpline.cxx
	vtkParametricSuperEllipsoid.cxx
	vtkParametricSuperToroid.cxx
	vtkParametricTorus.cxx
	vtkPentagonalPrism.cxx
	vtkPerlinNoise.cxx
	vtkPerspectiveTransform.cxx
	vtkPiecewiseFunction.cxx
	vtkPiecewiseFunctionAlgorithm.cxx
	vtkPiecewiseFunctionShiftScale.cxx
	vtkPixel.cxx
	vtkPlane.cxx
	vtkPlaneCollection.cxx
	vtkPlanes.cxx
	vtkPointData.cxx
	vtkPointLocator.cxx
	vtkPoints.cxx
	vtkPointSet.cxx
	vtkPointSetAlgorithm.cxx
	vtkPointSetSource.cxx
	vtkPointSetToPointSetFilter.cxx
	vtkPolyData.cxx
	vtkPolyDataAlgorithm.cxx
	vtkPolyDataCollection.cxx
	vtkPolyDataSource.cxx
	vtkPolyDataToPolyDataFilter.cxx
	vtkPolygon.cxx
	vtkPolyLine.cxx
	vtkPolyVertex.cxx
	vtkPriorityQueue.cxx
	vtkProcessObject.cxx
	vtkProcessStatistics.cxx
	vtkProp.cxx
	vtkPropAssembly.cxx
	vtkPropCollection.cxx
	vtkProperty2D.cxx
	vtkPyramid.cxx
	#vtkPythonUtil.cxx
	vtkQuad.cxx
	vtkQuadraticEdge.cxx
	vtkQuadraticHexahedron.cxx
	vtkQuadraticPyramid.cxx
	vtkQuadraticQuad.cxx
	vtkQuadraticTetra.cxx
	vtkQuadraticTriangle.cxx
	vtkQuadraticWedge.cxx
	vtkQuadric.cxx
	vtkRectilinearGrid.cxx
	vtkRectilinearGridAlgorithm.cxx
	vtkRectilinearGridSource.cxx
	vtkRectilinearGridToPolyDataFilter.cxx
	vtkReferenceCount.cxx
	vtkRungeKutta2.cxx
	vtkRungeKutta4.cxx
	vtkRungeKutta45.cxx
	vtkScalarsToColors.cxx
	vtkScalarTree.cxx
	vtkShortArray.cxx
	vtkSignedCharArray.cxx
	vtkSimpleCellTessellator.cxx
	vtkSimpleImageToImageFilter.cxx
	vtkSimpleScalarTree.cxx
	vtkSmartPointerBase.cxx
	vtkSmoothErrorMetric.cxx
	vtkSource.cxx
	vtkSphere.cxx
	vtkSphericalTransform.cxx
	vtkSpline.cxx
	vtkStdString.cxx
	vtkStreamingDemandDrivenPipeline.cxx
	vtkStringArray.cxx
	vtkStructuredData.cxx
	vtkStructuredGrid.cxx
	vtkStructuredGridAlgorithm.cxx
	vtkStructuredGridSource.cxx
	vtkStructuredGridToPolyDataFilter.cxx
	vtkStructuredGridToStructuredGridFilter.cxx
	vtkStructuredPoints.cxx
	vtkStructuredPointsCollection.cxx
	vtkStructuredPointsSource.cxx
	vtkStructuredPointsToPolyDataFilter.cxx
	vtkStructuredPointsToStructuredPointsFilter.cxx
	vtkStructuredPointsToUnstructuredGridFilter.cxx
	vtkStructuredVisibilityConstraint.cxx
	vtkSuperquadric.cxx
	vtkTableExtentTranslator.cxx
	#vtkTclUtil.cxx
	vtkTensor.cxx
	vtkTetra.cxx
	vtkThreadedImageAlgorithm.cxx
	vtkThreadMessager.cxx
	vtkTimerLog.cxx
	vtkTimeStamp.cxx
	vtkTransform.cxx
	vtkTransformCollection.cxx
	vtkTriangle.cxx
	vtkTriangleStrip.cxx
	vtkTrivialProducer.cxx
	vtkTypedArray.cxx.in
	vtkTypedArray.h.in
	vtkUniformGrid.cxx
	vtkUnsignedCharArray.cxx
	vtkUnsignedIntArray.cxx
	vtkUnsignedLongArray.cxx
	vtkUnsignedLongLongArray.cxx
	vtkUnsignedShortArray.cxx
	vtkUnsigned__Int64Array.cxx
	vtkUnstructuredGrid.cxx
	vtkUnstructuredGridAlgorithm.cxx
	vtkUnstructuredGridSource.cxx
	vtkUnstructuredGridToPolyDataFilter.cxx
	vtkUnstructuredGridToUnstructuredGridFilter.cxx
	vtkVersion.cxx
	vtkVertex.cxx
	vtkViewDependentErrorMetric.cxx
	#vtkViewport.cxx
	vtkVoidArray.cxx
	vtkVoxel.cxx
	vtkWarpTransform.cxx
	vtkWedge.cxx
	vtkWin32OutputWindow.cxx
	vtkWin32OutputWindowProcessEncoded.c
	vtkWin32ProcessOutputWindow.cxx
	#vtkWinCE.cxx
	vtkWindow.cxx
	vtkWindowLevelLookupTable.cxx
	vtkXMLFileOutputWindow.cxx
	vtk__Int64Array.cxx
)

ADD_LIBRARY(
    ${LIB_NAME} 
	${GWEARTH_USER_DEFINED_DYNAMIC_OR_STATIC}
    ${LIB_PUBLIC_HEADERS}
    ${TARGET_SRC} )
	
INCLUDE_DIRECTORIES(${GWEARTH_SOURCE_DIR}/Src ${GWEARTH_SOURCE_DIR}/Src/vtkExtending )

#IF (WIN32)
#  LINK_EXTERNAL(${LIB_NAME} ${TARGET_EXTERNAL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBRARY})
#ELSE(WIN32)
#  LINK_EXTERNAL(${LIB_NAME} ${TARGET_EXTERNAL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBRARY})
#ENDIF(WIN32)

#OPTION(NRL_STATIC_LIBRARIES "Link osgEarth against static GDAL and cURL, including static OpenSSL, Proj4, JPEG, PNG, and TIFF." OFF)
#if(NOT NRL_STATIC_LIBRARIES)
#  LINK_WITH_VARIABLES(${LIB_NAME} OSG_LIBRARY ZLIB_LIBRARIES)
#else(NOT NRL_STATIC_LIBRARIES)
#  LINK_WITH_VARIABLES(${LIB_NAME} OSG_LIBRARY OSGUTIL_LIBRARY OSGSIM_LIBRARY OSGTERRAIN_LIBRARY OSGDB_LIBRARY OSGFX_LIBRARY OSGVIEWER_LIBRARY OSGTEXT_LIBRARY OSGGA_LIBRARY OSGSHADOW_LIBRARY #OPENTHREADS_LIBRARY CURL_LIBRARY GDAL_LIBRARY ZLIB_LIBRARIES OSGMANIPULATOR_LIBRARY SSL_EAY_RELEASE LIB_EAY_RELEASE TIFF_LIBRARY PROJ4_LIBRARY PNG_LIBRARY JPEG_LIBRARY)
#endif(NOT NRL_STATIC_LIBRARIES)

#LINK_WITH_VARIABLES(${LIB_NAME} 
#								OSG_LIBRARY 
#								OSGVIEWER_LIBRARY
#								OPENTHREADS_LIBRARY
#								OSGEARTH_LIBRARY
#								ZLIB_LIBRARIES
#								)
 
#LINK_INTERNAL(${LIB_NAME} shlwapi)
#LINK_CORELIB_DEFAULT(${LIB_NAME} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBRARY})

INCLUDE(ModuleInstall OPTIONAL)